--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,8 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
-    
+
+
+    //gson
+    compile 'com.google.code.gson:gson:2.8.2'
 }
