--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,17 +32,17 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
 
-    compile 'com.android.support:design:27.0.0'
+    implementation 'com.android.support:design:27.0.0'
     implementation 'com.android.support:cardview-v7:27.0.0'
     implementation 'com.android.support:recyclerview-v7:27.0.0'
 
     //Add Library
-    compile 'com.google.android.gms:play-services-vision:9.8.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.google.android.gms:play-services-vision:9.8.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
-    compile 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
 
 
     //gson
-    compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
